# seec

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.TXT  README.TXT  abstract.html  appveyor.yml  index.html  install-ubuntu.html  params.json  publications.html  releases.html  seec-cc.html  seec-view.html  using-on-osx.html  using-on-windows.html
lib/Clang/: CMakeLists.txt  Compile.cpp  DotGraph.cpp  GraphExpansion.cpp  GraphExpansion.hpp  GraphLayout.cpp  MappedAST.cpp  MappedAllocaState.cpp  MappedFile.cpp  MappedFunctionState.cpp  MappedGlobalVariable.cpp  MappedLLVMValue.cpp  MappedLLVMValue.hpp  MappedLocal.cpp  MappedMallocState.cpp  MappedModule.cpp  MappedParam.cpp  MappedProcessState.cpp  MappedProcessTrace.cpp  MappedRuntimeErrorState.cpp  MappedStateMovement.cpp  MappedStmt.cpp  MappedStreamState.cpp  MappedThreadState.cpp  MappedValue.cpp  PrintOnlinePythonTutorTrace.cpp  RuntimeValueMapping.cpp  Search.cpp  StateMapping.cpp  SubRangeRecorder.cpp  TypeMatch.cpp
lib/ClangEPV/: CMakeLists.txt  ClangEPV.cpp  DeclLinks.def  StmtLinks.def
lib/DSA/: CMakeLists.txt  MemoryBlock.cpp
lib/ICU/: Augmenter.cpp  CMakeLists.txt  Format.cpp  Indexing.cpp  LazyMessage.cpp  LineWrapper.cpp  Output.cpp  Resources.cpp
lib/RuntimeErrors/: ArgumentTypes.cpp  CMakeLists.txt  FormatSelects.cpp  RuntimeErrors.cpp  UnicodeFormatter.cpp
lib/Trace/: BlockValueStore.cpp  CMakeLists.txt  DetectCallsLookup.cpp  FormatSpecifiers.hpp  FunctionState.cpp  GetRecreatedValue.cpp  IsRecordableType.cpp  MemoryState.cpp  PrintFormatSpecifiers.cpp  PrintFormatSpecifiers.def  PrintFormatSpecifiers.hpp  ProcessState.cpp  ScanFormatSpecifiers.cpp  ScanFormatSpecifiers.def  ScanFormatSpecifiers.hpp  StateMovement.cpp  StreamState.cpp  ThreadState.cpp  ThreadStateMover.cpp  ThreadStateMover.hpp  TraceFormat.cpp  TraceMemory.cpp  TracePointer.cpp  TraceProcessListener.cpp  TraceReader.cpp  TraceRecordedFunction.cpp  TraceSignalInfo.cpp  TraceStorage.cpp  TraceStreams.cpp  TraceThreadListener.cpp  TraceThreadListenerDetectCalls.cpp  TraceThreadListenerNotify.cpp  TraceThreadMemCheck.cpp  TraceThreadMemCheck.hpp  TracedFunction.cpp
lib/Util/: CMakeLists.txt  Error.cpp  GenericValueHandling.cpp  Printing.cpp  Resources.cpp  SynchronizedExit.cpp
lib/wxWidgets/: AugmentResources.cpp  AugmentationCollectionDataViewModel.cpp  AuiManagerHandle.cpp  CMakeLists.txt  CallbackFSHandler.cpp  Config.cpp  ConfigTracing.cpp  ICUBundleFSHandler.cpp  ImageResources.cpp  StringConversion.cpp
tests/: CMakeLists.txt  CTestConfig.cmake  print_compare_trace.sh  print_trace.sh  run_instrumented.sh
tests/byval/: CMakeLists.txt  ok-struct-.expected  ok-struct.c
tests/cstdlib/: CMakeLists.txt
tests/longdouble/: CMakeLists.txt  pass_return-.expected  pass_return.c  print-.expected  print.c
tests/pointers/: CMakeLists.txt  arithmetic-fail-high.expected  arithmetic-fail-low.expected  arithmetic-ok-one-past.expected  arithmetic-ok-zero.expected  arithmetic.c  constexpr-ok.expected  constexpr.c  dereferencing-fail-high.expected  dereferencing-fail-low.expected  dereferencing-fail-one-past.expected  dereferencing-ok-zero.expected  dereferencing.c  indexing-fail-low.expected  indexing-fail-one-past.expected  indexing-ok-zero.expected  indexing.c  print_argv_envp-ok.expected  print_argv_envp.c  ptr_to_literal-fail-high.expected  ptr_to_literal-fail-one-past.expected  ptr_to_literal-ok-zero.expected  ptr_to_literal.c  ptr_to_static-fail-high.expected  ptr_to_static-fail-low.expected  ptr_to_static-fail-one-past.expected  ptr_to_static-ok-zero.expected  ptr_to_static.c  return_pointer_to_local-fail.expected  return_pointer_to_local.c  struct_byval-valid.expected  struct_byval.c  struct_return-valid.expected  struct_return.c  temporal_local-fail.expected  temporal_local.c
tests/posix/: CMakeLists.txt
tests/stackrestore/: CMakeLists.txt  multiple_functions-.expected  multiple_functions.c
tests/streams/: CMakeLists.txt  print_n-3.expected  print_n-three.expected  print_n-zero.expected  print_n.c
tools/seec-cc/: CMakeLists.txt  SeeCExecuteCompilerInvocation.cpp  SeeCExecuteCompilerInvocation.hpp  cc1_main.cpp  main.cpp
tools/seec-clang-test/: CMakeLists.txt  main.cpp
tools/seec-explain-test/: CMakeLists.txt  main.cpp
tools/seec-instrument/: CMakeLists.txt  seec-instrument.cpp
tools/seec-interpreter/: CMakeLists.txt  main.cpp
tools/seec-ld/: CMakeLists.txt  seec-ld.cpp
tools/seec-print/: CMakeLists.txt  ClangMapped.cpp  ClangMapped.hpp  Unmapped.cpp  Unmapped.hpp  main.cpp
tools/seec-trace-print/: CMakeLists.txt  ClangMapped.cpp  ClangMapped.hpp  OnlinePythonTutor.cpp  OnlinePythonTutor.hpp  Unmapped.cpp  Unmapped.hpp  main.cpp
tools/seec-trace-view/: ActionRecord.cpp  ActionRecord.hpp  ActionRecordSettings.cpp  ActionRecordSettings.hpp  ActionReplay.cpp  ActionReplay.hpp  AnnotationEditor.cpp  AnnotationEditor.hpp  Annotations.cpp  Annotations.hpp  AugmentationSettings.cpp  AugmentationSettings.hpp  CMakeLists.txt  ColourSchemeSettings.cpp  ColourSchemeSettings.hpp  CommonMenus.cpp  CommonMenus.hpp  ExplanationViewer.cpp  ExplanationViewer.hpp  FunctionStateViewer.cpp  FunctionStateViewer.hpp  HighlightEvent.cpp  HighlightEvent.hpp  InternationalizedButton.cpp  LocaleSettings.cpp  LocaleSettings.hpp  MallocViewer.cpp  MallocViewer.hpp  NotifyContext.cpp  NotifyContext.hpp  OpenTrace.cpp  OpenTrace.hpp  Preferences.cpp  Preferences.hpp  ProcessMoveEvent.cpp  ProcessMoveEvent.hpp  ProcessTimeControl.cpp  ProcessTimeControl.hpp  ProcessTimeGauge.hpp  RuntimeValueLookup.cpp  (+34 more)
tools/seec-view/: ActionRecord.cpp  ActionRecord.hpp  ActionRecordSettings.cpp  ActionReplay.cpp  AnnotationEditor.cpp  Annotations.cpp  AugmentationSettings.cpp  AugmentationSettings.hpp  CMakeLists.txt  ColourSchemeSettings.cpp  ColourSchemeSettings.hpp  CommonMenus.cpp  ExplanationViewer.cpp  ExplanationViewer.hpp  FunctionStateViewer.cpp  HiddenExecuteAndWait.hpp  HiddenExecuteAndWait_Generic.cpp  HiddenExecuteAndWait_WIN32.cpp  InternationalizedButton.hpp  LocaleSettings.cpp  LocaleSettings.hpp  OpenTrace.cpp  (+24 more)
(+289 files in other folders)
