set(SEEC_CLANGEPV_HEADERS
  ../../include/seec/ClangEPV/ClangEPV.hpp
  DeclLinks.def
  StmtLinks.def
)

set(SEEC_CLANGEPV_SOURCES
  ClangEPV.cpp
)

add_library(SeeCClangEPV ${SEEC_CLANGEPV_HEADERS} ${SEEC_CLANGEPV_SOURCES})

INSTALL(TARGETS SeeCClangEPV
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)
